port Tomcat Generic et al changes reviewed by Jan Luehe and JeanFrancois Arcand
svn path=/trunk/; revision=21323


Former-commit-id: f6996188dacfa38e2faf02f353262f40bb301332