@@ -23,6 +23,7 @@ package org.apache.catalina.servlets;
 
 
 import java.io.IOException;
+import java.io.StringReader;
 import java.io.StringWriter;
 import java.io.Writer;
 import java.security.MessageDigest;
@@ -39,6 +40,7 @@ import javax.naming.NameClassPair;
 import javax.naming.NamingEnumeration;
 import javax.naming.NamingException;
 import javax.naming.directory.DirContext;
+import javax.servlet.ServletContext;
 import javax.servlet.ServletException;
 import javax.servlet.UnavailableException;
 import javax.servlet.http.HttpServletRequest;
@@ -47,6 +49,7 @@ import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
 
+import org.apache.catalina.Globals;
 import org.apache.catalina.util.DOMWriter;
 import org.apache.catalina.util.MD5Encoder;
 import org.apache.catalina.util.RequestUtil;
@@ -59,6 +62,7 @@ import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
+import org.xml.sax.EntityResolver;
 import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
 
@@ -66,10 +70,52 @@ import org.xml.sax.SAXException;
 
 /**
  * Servlet which adds support for WebDAV level 2. All the basic HTTP requests
- * are handled by the DefaultServlet.
+ * are handled by the DefaultServlet. The WebDAVServlet must not be used as the
+ * default servlet (ie mapped to '/') as it will not work in this configuration.
+ * To enable WebDAV for a context add the following to web.xml:<br/><code>
+ * &lt;servlet&gt;<br/>
+ *  &lt;servlet-name&gt;webdav&lt;/servlet-name&gt;<br/>
+ *  &lt;servlet-class&gt;org.apache.catalina.servlets.WebdavServlet&lt;/servlet-class&gt;<br/>
+ *    &lt;init-param&gt;<br/>
+ *      &lt;param-name&gt;debug&lt;/param-name&gt;<br/>
+ *      &lt;param-value&gt;0&lt;/param-value&gt;<br/>
+ *    &lt;/init-param&gt;<br/>
+ *    &lt;init-param&gt;<br/>
+ *      &lt;param-name&gt;listings&lt;/param-name&gt;<br/>
+ *      &lt;param-value&gt;true&lt;/param-value&gt;<br/>
+ *    &lt;/init-param&gt;<br/>
+ *  &lt;/servlet&gt;<br/>
+ *  &lt;servlet-mapping&gt;<br/>
+ *    &lt;servlet-name&gt;webdav&lt;/servlet-name&gt;<br/>
+ *    &lt;url-pattern&gt;/*&lt;/url-pattern&gt;<br/>
+ *  &lt;/servlet-mapping&gt;
+ * </code>
+ * <p/>
+ * This will enable read only access. To enable read-write access add:<br/>
+ * <code>
+ *    &lt;init-param&gt;<br/>
+ *      &lt;param-name&gt;readonly&lt;/param-name&gt;<br/>
+ *      &lt;param-value&gt;false&lt;/param-value&gt;<br/>
+ *    &lt;/init-param&gt;<br/>
+ * </code>
+ * <p/>
+ * To make the content editable via a different URL, using the following
+ * mapping:<br/>
+ * <code>
+ *  &lt;servlet-mapping&gt;<br/>
+ *    &lt;servlet-name&gt;webdav&lt;/servlet-name&gt;<br/>
+ *    &lt;url-pattern&gt;/webdavedit/*&lt;/url-pattern&gt;<br/>
+ *  &lt;/servlet-mapping&gt;
+ * </code>
+ * <p/>
+ * Don't forget to secure access appropriately to the editing URLs. With this
+ * configuration the context will be accessible to normal users as before. Those
+ * users with the necessary access will be able to edit content available via
+ * http://host:port/context/content using
+ * http://host:port/context/webdavedit/content
  *
  * @author Remy Maucherat
- * @version $Revision: 1.5 $ $Date: 2007/05/05 05:32:18 $
+ * @version $Revision: 600268 $ $Date: 2007-12-02 12:09:55 +0100 $
  */
 
 public class WebdavServlet
@@ -177,7 +223,8 @@ public class WebdavServlet
      * Key : path <br>
      * Value : LockInfo
      */
-    private Hashtable resourceLocks = new Hashtable();
+    private Hashtable<String,LockInfo> resourceLocks =
+        new Hashtable<String,LockInfo>();
 
 
     /**
@@ -188,7 +235,8 @@ public class WebdavServlet
      * collection. Each element of the Vector is the path associated with
      * the lock-null resource.
      */
-    private Hashtable lockNullResources = new Hashtable();
+    private Hashtable<String,Vector<String>> lockNullResources =
+        new Hashtable<String,Vector<String>>();
 
 
     /**
@@ -197,7 +245,7 @@ public class WebdavServlet
      * Key : path <br>
      * Value : LockInfo
      */
-    private Vector collectionLocks = new Vector();
+    private Vector<LockInfo> collectionLocks = new Vector<LockInfo>();
 
 
     /**
@@ -217,15 +265,8 @@ public class WebdavServlet
 
         super.init();
 
-        String value = null;
-        try {
-            value = getServletConfig().getInitParameter("secret");
-            if (value != null)
-                secret = value;
-        } catch (Throwable t) {
-            ;
-        }
-
+        if (getServletConfig().getInitParameter("secret") != null)
+            secret = getServletConfig().getInitParameter("secret");
 
         // Load the MD5 helper used to calculate signatures.
         try {
@@ -250,7 +291,10 @@ public class WebdavServlet
         try {
             documentBuilderFactory = DocumentBuilderFactory.newInstance();
             documentBuilderFactory.setNamespaceAware(true);
+            documentBuilderFactory.setExpandEntityReferences(false);
             documentBuilder = documentBuilderFactory.newDocumentBuilder();
+            documentBuilder.setEntityResolver(
+                    new WebdavResolver(this.getServletContext()));
         } catch(ParserConfigurationException e) {
             throw new ServletException
                 (sm.getString("webdavservlet.jaxpfailed"));
@@ -320,6 +364,34 @@ public class WebdavServlet
 
 
     /**
+     * Override the DefaultServlet implementation and only use the PathInfo. If
+     * the ServletPath is non-null, it will be because the WebDAV servlet has
+     * been mapped to a url other than /* to configure editing at different url
+     * than normal viewing.
+     *
+     * @param request The servlet request we are processing
+     */
+    protected String getRelativePath(HttpServletRequest request) {
+        // Are we being processed by a RequestDispatcher.include()?
+        if (request.getAttribute(Globals.INCLUDE_REQUEST_URI_ATTR) != null) {
+            String result = (String) request.getAttribute(
+                                            Globals.INCLUDE_PATH_INFO_ATTR);
+            if ((result == null) || (result.equals("")))
+                result = "/";
+            return (result);
+        }
+
+        // No, extract the desired path directly from the request
+        String result = request.getPathInfo();
+        if ((result == null) || (result.equals(""))) {
+            result = "/";
+        }
+        return (result);
+
+    }
+
+
+    /**
      * OPTIONS Method.
      *
      * @param req The request
@@ -368,7 +440,7 @@ public class WebdavServlet
         }
 
         // Properties which are to be displayed.
-        Vector properties = null;
+        Vector<String> properties = null;
         // Propfind depth
         int depth = INFINITY;
         // Propfind type
@@ -389,43 +461,46 @@ public class WebdavServlet
         }
 
         Node propNode = null;
-
-        DocumentBuilder documentBuilder = getDocumentBuilder();
-
-        try {
-            Document document = documentBuilder.parse
-                (new InputSource(req.getInputStream()));
-
-            // Get the root element of the document
-            Element rootElement = document.getDocumentElement();
-            NodeList childList = rootElement.getChildNodes();
-
-            for (int i=0; i < childList.getLength(); i++) {
-                Node currentNode = childList.item(i);
-                switch (currentNode.getNodeType()) {
-                case Node.TEXT_NODE:
-                    break;
-                case Node.ELEMENT_NODE:
-                    if (currentNode.getNodeName().endsWith("prop")) {
-                        type = FIND_BY_PROPERTY;
-                        propNode = currentNode;
+        
+        if (req.getInputStream().available() > 0) {
+            DocumentBuilder documentBuilder = getDocumentBuilder();
+    
+            try {
+                Document document = documentBuilder.parse
+                    (new InputSource(req.getInputStream()));
+    
+                // Get the root element of the document
+                Element rootElement = document.getDocumentElement();
+                NodeList childList = rootElement.getChildNodes();
+    
+                for (int i=0; i < childList.getLength(); i++) {
+                    Node currentNode = childList.item(i);
+                    switch (currentNode.getNodeType()) {
+                    case Node.TEXT_NODE:
+                        break;
+                    case Node.ELEMENT_NODE:
+                        if (currentNode.getNodeName().endsWith("prop")) {
+                            type = FIND_BY_PROPERTY;
+                            propNode = currentNode;
+                        }
+                        if (currentNode.getNodeName().endsWith("propname")) {
+                            type = FIND_PROPERTY_NAMES;
+                        }
+                        if (currentNode.getNodeName().endsWith("allprop")) {
+                            type = FIND_ALL_PROP;
+                        }
+                        break;
                     }
-                    if (currentNode.getNodeName().endsWith("propname")) {
-                        type = FIND_PROPERTY_NAMES;
-                    }
-                    if (currentNode.getNodeName().endsWith("allprop")) {
-                        type = FIND_ALL_PROP;
-                    }
-                    break;
                 }
+            } catch (SAXException e) {
+                // Something went wrong - use the defaults.
+            } catch (IOException e) {
+                // Something went wrong - use the defaults.
             }
-        } catch(Exception e) {
-            // Most likely there was no content : we use the defaults.
-            // TODO : Enhance that !
         }
 
         if (type == FIND_BY_PROPERTY) {
-            properties = new Vector();
+            properties = new Vector<String>();
             NodeList childList = propNode.getChildNodes();
 
             for (int i=0; i < childList.getLength(); i++) {
@@ -513,11 +588,11 @@ public class WebdavServlet
                             properties);
         } else {
             // The stack always contains the object of the current level
-            Stack stack = new Stack();
+            Stack<String> stack = new Stack<String>();
             stack.push(path);
 
             // Stack of the objects one level below
-            Stack stackBelow = new Stack();
+            Stack<String> stackBelow = new Stack<String>();
 
             while ((!stack.isEmpty()) && (depth >= 0)) {
 
@@ -576,7 +651,7 @@ public class WebdavServlet
                 if (stack.isEmpty()) {
                     depth--;
                     stack = stackBelow;
-                    stackBelow = new Stack();
+                    stackBelow = new Stack<String>();
                 }
 
                 generatedXML.sendData();
@@ -831,14 +906,14 @@ public class WebdavServlet
             }
             if (lockDurationStr.startsWith("Second-")) {
                 lockDuration =
-                    (Integer.valueOf(lockDurationStr.substring(7))).intValue();
+                    Integer.parseInt(lockDurationStr.substring(7));
             } else {
                 if (lockDurationStr.equalsIgnoreCase("infinity")) {
                     lockDuration = MAX_TIMEOUT;
                 } else {
                     try {
                         lockDuration =
-                            (Integer.valueOf(lockDurationStr)).intValue();
+                            Integer.parseInt(lockDurationStr);
                     } catch (NumberFormatException e) {
                         lockDuration = MAX_TIMEOUT;
                     }
@@ -866,7 +941,9 @@ public class WebdavServlet
             // Get the root element of the document
             Element rootElement = document.getDocumentElement();
             lockInfoNode = rootElement;
-        } catch(Exception e) {
+        } catch (IOException e) {
+            lockRequestType = LOCK_REFRESH;
+        } catch (SAXException e) {
             lockRequestType = LOCK_REFRESH;
         }
 
@@ -1024,7 +1101,7 @@ public class WebdavServlet
 
                 // Checking if a child resource of this collection is
                 // already locked
-                Vector lockPaths = new Vector();
+                Vector<String> lockPaths = new Vector<String>();
                 locksList = collectionLocks.elements();
                 while (locksList.hasMoreElements()) {
                     LockInfo currentLock = (LockInfo) locksList.nextElement();
@@ -1171,10 +1248,10 @@ public class WebdavServlet
                         int slash = lock.path.lastIndexOf('/');
                         String parentPath = lock.path.substring(0, slash);
 
-                        Vector lockNulls =
-                            (Vector) lockNullResources.get(parentPath);
+                        Vector<String> lockNulls =
+                            lockNullResources.get(parentPath);
                         if (lockNulls == null) {
-                            lockNulls = new Vector();
+                            lockNulls = new Vector<String>();
                             lockNullResources.put(parentPath, lockNulls);
                         }
 
@@ -1643,7 +1720,7 @@ public class WebdavServlet
 
         // Copying source to destination
 
-        Hashtable errorList = new Hashtable();
+        Hashtable<String,Integer> errorList = new Hashtable<String,Integer>();
 
         boolean result = copyResource(resources, errorList,
                                       path, destinationPath);
@@ -1657,7 +1734,7 @@ public class WebdavServlet
 
         // Copy was successful
         resp.setStatus(WebdavStatus.SC_CREATED);
-
+        
         // Removing any lock-null resource which would be present at
         // the destination path
         lockNullResources.remove(destinationPath);
@@ -1676,8 +1753,8 @@ public class WebdavServlet
      * @param source Path of the resource to be copied
      * @param dest Destination path
      */
-    private boolean copyResource(DirContext resources, Hashtable errorList,
-                                 String source, String dest) {
+    private boolean copyResource(DirContext resources,
+            Hashtable<String,Integer> errorList, String source, String dest) {
 
         if (debug > 1)
             log("Copy: " + source + " To: " + dest);
@@ -1694,7 +1771,7 @@ public class WebdavServlet
                 resources.createSubcontext(dest);
             } catch (NamingException e) {
                 errorList.put
-                    (dest, Integer.valueOf(WebdavStatus.SC_CONFLICT));
+                    (dest, new Integer(WebdavStatus.SC_CONFLICT));
                 return false;
             }
 
@@ -1714,7 +1791,7 @@ public class WebdavServlet
                 }
             } catch (NamingException e) {
                 errorList.put
-                    (dest, Integer.valueOf(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
+                    (dest, new Integer(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
                 return false;
             }
 
@@ -1726,13 +1803,13 @@ public class WebdavServlet
                 } catch (NamingException e) {
                     errorList.put
                         (source,
-                         Integer.valueOf(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
+                         new Integer(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
                     return false;
                 }
             } else {
                 errorList.put
                     (source,
-                     Integer.valueOf(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
+                     new Integer(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
                 return false;
             }
 
@@ -1817,13 +1894,14 @@ public class WebdavServlet
             }
         } else {
 
-            Hashtable errorList = new Hashtable();
+            Hashtable<String,Integer> errorList =
+                new Hashtable<String,Integer>();
 
             deleteCollection(req, resources, path, errorList);
             try {
                 resources.unbind(path);
             } catch (NamingException e) {
-                errorList.put(path, Integer.valueOf
+                errorList.put(path, new Integer
                     (WebdavStatus.SC_INTERNAL_SERVER_ERROR));
             }
 
@@ -1852,14 +1930,15 @@ public class WebdavServlet
      */
     private void deleteCollection(HttpServletRequest req,
                                   DirContext resources,
-                                  String path, Hashtable errorList) {
+                                  String path,
+                                  Hashtable<String,Integer> errorList) {
 
         if (debug > 1)
             log("Delete:" + path);
 
         if ((path.toUpperCase().startsWith("/WEB-INF")) ||
             (path.toUpperCase().startsWith("/META-INF"))) {
-            errorList.put(path, Integer.valueOf(WebdavStatus.SC_FORBIDDEN));
+            errorList.put(path, new Integer(WebdavStatus.SC_FORBIDDEN));
             return;
         }
 
@@ -1875,7 +1954,7 @@ public class WebdavServlet
         try {
             enumeration = resources.list(path);
         } catch (NamingException e) {
-            errorList.put(path, Integer.valueOf
+            errorList.put(path, new Integer
                 (WebdavStatus.SC_INTERNAL_SERVER_ERROR));
             return;
         }
@@ -1889,8 +1968,7 @@ public class WebdavServlet
 
             if (isLocked(childName, ifHeader + lockTokenHeader)) {
 
-                errorList.put(childName,
-                              Integer.valueOf(WebdavStatus.SC_LOCKED));
+                errorList.put(childName, new Integer(WebdavStatus.SC_LOCKED));
 
             } else {
 
@@ -1907,13 +1985,13 @@ public class WebdavServlet
                             // If it's not a collection, then it's an unknown
                             // error
                             errorList.put
-                                (childName, Integer.valueOf
+                                (childName, new Integer
                                     (WebdavStatus.SC_INTERNAL_SERVER_ERROR));
                         }
                     }
                 } catch (NamingException e) {
                     errorList.put
-                        (childName, Integer.valueOf
+                        (childName, new Integer
                             (WebdavStatus.SC_INTERNAL_SERVER_ERROR));
                 }
             }
@@ -1994,7 +2072,7 @@ public class WebdavServlet
     private void parseProperties(HttpServletRequest req,
                                  XMLWriter generatedXML,
                                  String path, int type,
-                                 Vector propertiesVector) {
+                                 Vector<String> propertiesVector) {
 
         // Exclude any resource in the /WEB-INF and /META-INF subdirectories
         // (the "toUpperCase()" avoids problems on Windows systems)
@@ -2129,14 +2207,14 @@ public class WebdavServlet
 
         case FIND_BY_PROPERTY :
 
-            Vector propertiesNotFound = new Vector();
+            Vector<String> propertiesNotFound = new Vector<String>();
 
             // Parse the list of properties
 
             generatedXML.writeElement(null, "propstat", XMLWriter.OPENING);
             generatedXML.writeElement(null, "prop", XMLWriter.OPENING);
 
-            Enumeration properties = propertiesVector.elements();
+            Enumeration<String> properties = propertiesVector.elements();
 
             while (properties.hasMoreElements()) {
 
@@ -2237,8 +2315,8 @@ public class WebdavServlet
 
             if (propertiesNotFoundList.hasMoreElements()) {
 
-                status = "HTTP/1.1 " + WebdavStatus.SC_NOT_FOUND + " "
-                    + WebdavStatus.getStatusText(WebdavStatus.SC_NOT_FOUND);
+                status = "HTTP/1.1 " + WebdavStatus.SC_NOT_FOUND
+                    + " " + WebdavStatus.getStatusText(WebdavStatus.SC_NOT_FOUND);
 
                 generatedXML.writeElement(null, "propstat", XMLWriter.OPENING);
                 generatedXML.writeElement(null, "prop", XMLWriter.OPENING);
@@ -2404,7 +2482,7 @@ public class WebdavServlet
 
         case FIND_BY_PROPERTY :
 
-            Vector propertiesNotFound = new Vector();
+            Vector<String> propertiesNotFound = new Vector<String>();
 
             // Parse the list of properties
 
@@ -2484,8 +2562,8 @@ public class WebdavServlet
 
             if (propertiesNotFoundList.hasMoreElements()) {
 
-                status = "HTTP/1.1 " + WebdavStatus.SC_NOT_FOUND + " "
-                    + WebdavStatus.getStatusText(WebdavStatus.SC_NOT_FOUND);
+                status = "HTTP/1.1 " + WebdavStatus.SC_NOT_FOUND
+                    + " " + WebdavStatus.getStatusText(WebdavStatus.SC_NOT_FOUND);
 
                 generatedXML.writeElement(null, "propstat", XMLWriter.OPENING);
                 generatedXML.writeElement(null, "prop", XMLWriter.OPENING);
@@ -2652,7 +2730,7 @@ public class WebdavServlet
         String scope = "exclusive";
         int depth = 0;
         String owner = "";
-        Vector tokens = new Vector();
+        Vector<String> tokens = new Vector<String>();
         long expiresAt = 0;
         Date creationDate = new Date();
 
@@ -2749,20 +2827,26 @@ public class WebdavServlet
     }
 
 
-    // --------------------------------------------------- Property Inner Class
-
-
-    private class Property {
-
-        public String name;
-        public String value;
-        public String namespace;
-        public String namespaceAbbrev;
-        public int status = WebdavStatus.SC_OK;
-
+    // --------------------------------------------- WebdavResolver Inner Class
+    /**
+     * Work around for XML parsers that don't fully respect
+     * {@link DocumentBuilderFactory#setExpandEntityReferences(false)}. External
+     * references are filtered out for security reasons. See CVE-2007-5461.
+     */
+    private class WebdavResolver implements EntityResolver {
+        private ServletContext context;
+        
+        public WebdavResolver(ServletContext theContext) {
+            context = theContext;
+        }
+     
+        public InputSource resolveEntity (String publicId, String systemId) {
+            context.log(sm.getString("webdavservlet.enternalEntityIgnored",
+                    publicId, systemId));
+            return new InputSource(
+                    new StringReader("Ignored external entity"));
+        }
     }
-
-
 };
 
 
@@ -2789,7 +2873,8 @@ class WebdavStatus {
      * status codes to descriptive text.  This is a static
      * variable.
      */
-    private static Hashtable mapStatusCodes = new Hashtable();
+    private static Hashtable<Integer,String> mapStatusCodes =
+        new Hashtable<Integer,String>();
 
 
     // ------------------------------------------------------ HTTP Status Codes
@@ -3058,7 +3143,7 @@ class WebdavStatus {
      *                  HTTP status code (e.g., "OK").
      */
     public static String getStatusText(int nHttpStatusCode) {
-        Integer intKey = Integer.valueOf(nHttpStatusCode);
+        Integer intKey = new Integer(nHttpStatusCode);
 
         if (!mapStatusCodes.containsKey(intKey)) {
             return "";
@@ -3079,8 +3164,9 @@ class WebdavStatus {
      * @param   strVal  [IN] HTTP status text
      */
     private static void addStatusCodeMap(int nKey, String strVal) {
-        mapStatusCodes.put(Integer.valueOf(nKey), strVal);
+        mapStatusCodes.put(new Integer(nKey), strVal);
     }
 
 };
+
 
